chore: bump development target to iOS 11.0

--- a/Example/iOS/Podfile
+++ b/Example/iOS/Podfile
@@ -1,18 +1,26 @@
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'AXPhotoViewerExample' do
 
   use_frameworks!
 
-  pod 'Reveal-SDK'
-
   # Loading spinner
   pod 'DRPLoadingSpinner'
 
   # Image downloading / caching
-  pod 'PINRemoteImage', '~> 3.0.0-beta.9'
+  pod 'PINRemoteImage', '3.0.3'
 
   # AXPhotoViewer
   pod 'AXPhotoViewer/PINRemoteImage', :path => '../../AXPhotoViewer.podspec'
 
+end
+
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            if config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f < 11.0
+                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+            end
+        end
+    end
 end
